--- a/options/train/IFA/train_IFA_seg_post.yml
+++ b/options/train/IFA/train_IFA_seg_post.yml
@@ -1,12 +1,12 @@
 
-do_evaluate: false
+do_evaluate: 1000
 minimum_PSNR_caused_by_attack: 25
 use_restore: false
 
 #### model path dirs
 predictor_folder: /groupshare/IFA_results/model/segment_postprocess/
 
-load_predictor_models: ~ # 4_13999_qf_predict.pth
+load_predictor_models: 1_9_qf_predict.pth
 consider_mask_prediction: false
 
 load_restormer_models: 15_3999_qf_predict.pth
