--- a/options/train/IFA/train_IFA_baseline.yml
+++ b/options/train/IFA/train_IFA_baseline.yml
@@ -10,15 +10,15 @@ load_predictor_models: 22_9_qf_predict.pth #0_13999
 minimum_PSNR_caused_by_attack: 20
 
 #### model path for MODE 3:detector
-which_model_for_detector: Mantra
+which_model_for_detector: OSN
 load_detector_models: None
-feature_dim: 64
+feature_dim: 2048
 
 
 
 #### general settings
 
-gpu_ids: [4]
+gpu_ids: [3]
 
 restart_step: 1000
 model_save_period: 4000
