--- a/options/train/tianchi/train_tianchi.yml
+++ b/options/train/tianchi/train_tianchi.yml
@@ -2,14 +2,14 @@ use_mae: true
 
 #### models path dirs
 
-conduct_test: false
+conduct_test: true
 network_arch: cat #shunt_convnext
-model_load_number: ~ #26_2999_cat.pth #95_43_ViT.pth
+model_load_number: 10_9_cat.pth #95_43_ViT.pth
 #### general settings
 
-gpu_ids: [2,3]
+gpu_ids: [3]
 
-only_test: false
+only_test: true
 focal_alpha: 0.025
 
 restart_step: 1000
